--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     body {
         margin: 0;
         font-family: Arial, sans-serif;
-        background: linear-gradient(to right, #00BE18, #DAA520), url('https://upload.wikimedia.org/wikipedia/commons/a/a4/Flag_of_the_United_States.svg') no-repeat center center/cover;
+        background: linear-gradient(to right,  #edb91e, #DAA520), url('https://upload.wikimedia.org/wikipedia/commons/a/a4/Flag_of_the_United_States.svg') no-repeat center center/cover;
         color: white;
     }
 
@@ -780,3 +780,4 @@ Community Power – Every holder plays a part in shaping the journey. </h1>
 
 
 </html>
+
