--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
             $BABY is more than just a token—it’s a community-powered revolution aiming for adorable profits. Let’s push $BABY to hit the moon in this bull run!
 
             <br>Join Us Now: <br> <a href="https://t.me/bscbabyportal">Telegram</a>
-            <a href="https://x.com/BABBYBSC">Twitter</a> <br> Let’s build, send it, and experience 500X gains together! 🚀
+            <a href="https://x.com/BABBYBSC">Twitter</a> <br> We will Giga send it! 🚀
         </div>
     </div>
 
@@ -778,3 +778,4 @@
 
 
 </html>
+
